updated bullets to AB

--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
           improvement and implementation on our Draught Line and Palletizers. Additionally selected over
           peers to lead a critical production line that was underperforming.</p>
         <ul>
+          <li>As a process improvement initiative, used SQL database queries through Microsoft Excel to
+            develop visual data displays for shift kick-off meetings</li>
           <li>Developed and executed a preventative maintenance program that increased our equipment
             reliability metric by 43% year over year</li>
           <li>Created a maintenance scorecard for performance review that was adopted as the North American
