added react project

--- a/index.html
+++ b/index.html
@@ -45,7 +45,23 @@
         <h3>PROJECTS</h3>
         <div class='project-container'>
           <div class='project-img'>
-            <img class='crypto-img' src='images/crypto invest.jpg' alt='crypto hero image'>
+            <img class='react-img' src='images/react.png' alt='react logo'>
+          </div>
+          <div class='project-details'>
+            <h4>My Portfolio in React</h4>
+            <h4 class='hash1'>#React, #React-Router, #API, #Zeit</h4>
+            <p>
+              <span class='hash2'>Front End Web Application -</span>
+              Responsive portfolio built in React with React Router and an added API call to NASA's APOD!
+            </p>
+            <a href="https://react-portfolio.mblakley4.now.sh/" target="_blank">Portfolio Site Link</a>
+            <span> | </span>
+            <a href="https://github.com/mblakley4/react-portfolio" target="_blank">GitHub</a>
+          </div>
+        </div>
+        <div class='project-container'>
+          <div class='project-img'>
+            <img class='crypto-img' src='images/crypto invest.jpg' alt='crypto hero'>
           </div>
           <div class='project-details'>
             <h4>Crypto Circadian</h4>
@@ -61,7 +77,7 @@
         </div>
         <div class='project-container'>
           <div class='project-img'>
-            <img class='gym-img' src='images/gym.jpg' alt='quiz app hero image'>
+            <img class='gym-img' src='images/gym.jpg' alt='quiz app hero'>
           </div>
           <div class='project-details'>
             <h4>Weight Training Knowledge Check</h4>
@@ -158,13 +174,13 @@
     <footer id='js-footer'>
       <ul>
           <li><img class="square footer-icon" src="images/email.png">
-              <a href="mailto:m.blakley@icloud.com" target="_blank" alt="email icon">Email</a></li>
+              <a href="mailto:m.blakley@icloud.com" target="_blank" alt="email icon"></a></li>
           <li><img class="footer-icon" src="images/github.png">
-              <a href="https://github.com/mblakley4" target="_blank" alt="gitHub logo">GitHub</a></li>
+              <a href="https://github.com/mblakley4" target="_blank" alt="gitHub logo"></a></li>
           <li><img class="footer-icon" src="images/linkedIn.png">
-              <a href="https://twitter.com/mblakley4" target="_blank" alt="Linked In logo">Linked In</a></li>
+              <a href="https://twitter.com/mblakley4" target="_blank" alt="Linked In logo"></a></li>
           <li><img class="footer-icon" src="images/twitter.png">
-              <a href="https://twitter.com/mblakley4" target="_blank" alt="twitter logo">Twitter</a></li>
+              <a href="https://twitter.com/mblakley4" target="_blank" alt="twitter logo"></a></li>
       </ul>
     </footer>
   </body>
