--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
         <h3>PROJECTS</h3>
         <div class='project-container'>
           <div class='project-img'>
-            <img class='react-img' src='images/react.png' alt='react logo'>
+            <a href="https://react-portfolio.mblakley4.now.sh/" target="_blank">
+              <img class='react-img' src='images/react.png' alt='react logo'>
+            </a>
           </div>
           <div class='project-details'>
             <h4>My Portfolio in React</h4>
@@ -61,7 +63,9 @@
         </div>
         <div class='project-container'>
           <div class='project-img'>
-            <img class='crypto-img' src='images/crypto invest.jpg' alt='crypto hero'>
+            <a href="https://mblakley4.github.io/cryptoCircadian/" target="_blank">
+              <img class='crypto-img' src='images/crypto invest.jpg' alt='crypto hero'>
+            </a>
           </div>
           <div class='project-details'>
             <h4>Crypto Circadian</h4>
@@ -77,7 +81,9 @@
         </div>
         <div class='project-container'>
           <div class='project-img'>
-            <img class='gym-img' src='images/gym.jpg' alt='quiz app hero'>
+            <a href="https://mblakley4.github.io/Quiz-App/" target="_blank">
+              <img class='gym-img' src='images/gym.jpg' alt='quiz app hero'>
+            </a>
           </div>
           <div class='project-details'>
             <h4>Weight Training Knowledge Check</h4>
