terra-app project added

--- a/index.html
+++ b/index.html
@@ -44,6 +44,28 @@
         <h3>PROJECTS</h3>
         <div class='project-container'>
           <div class='project-img'>
+            <a href="https://terra-app.mblakley4.now.sh" target="_blank">
+              <img class='terra-app-img' src='images/terra_app.png' alt='The Terra Project App'>
+            </a>
+          </div>
+          <div class='project-details'>
+            <h4>The <em>Terra </em> App</h4>
+            <h4 class='hash1'>#React.js, #Node.js, #PostgreSQL, #CSS3</h4>
+            <p>
+              <span class='hash2'>Full Stack Web Application -</span>
+              Responsive full stack web application built with a React client running on a Node server with PostgreSQL
+              DB management.
+            </p>
+            <a href="https://terra-app.mblakley4.now.sh" target="_blank">Live Site </a>
+            <span> | </span>
+            <a href="https://github.com/mblakley4/terra-app" target="_blank">Client GitHub</a>
+            <span> | </span>
+            <a href="https://github.com/mblakley4/terra-api" target="_blank">API GitHub</a>
+          </div>
+        </div>
+
+        <div class='project-container'>
+          <div class='project-img'>
             <a href="https://react-portfolio.mblakley4.now.sh/" target="_blank">
               <img class='react-img' src='images/react.png' alt='react logo'>
             </a>
@@ -60,6 +82,7 @@
             <a href="https://github.com/mblakley4/react-portfolio" target="_blank">GitHub</a>
           </div>
         </div>
+
         <div class='project-container'>
           <div class='project-img'>
             <a href="https://mblakley4.github.io/cryptoCircadian/" target="_blank">
@@ -78,6 +101,7 @@
             <a href="https://github.com/mblakley4/cryptoCircadian" target="_blank">GitHub</a>
           </div>
         </div>
+
         <div class='project-container'>
           <div class='project-img'>
             <a href="https://mblakley4.github.io/Quiz-App/" target="_blank">
