--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <h3>PROJECTS</h3>
         <div class='project-container'>
           <div class='project-img'>
-            <a href="https://terra-app.mblakley4.now.sh" target="_blank">
+            <a href="https://terra-app.now.sh" target="_blank">
               <img class='terra-app-img' src='images/terra_app.png' alt='The Terra Project App'>
             </a>
           </div>
@@ -56,7 +56,7 @@
               Responsive full stack web application built with a React client running on a Node server with PostgreSQL
               DB management.
             </p>
-            <a href="https://terra-app.mblakley4.now.sh" target="_blank">Live Site </a>
+            <a href="https://terra-app.now.sh" target="_blank">Live Site </a>
             <span> | </span>
             <a href="https://github.com/mblakley4/terra-app" target="_blank">Client GitHub</a>
             <span> | </span>
