added cbl project

--- a/index.html
+++ b/index.html
@@ -44,6 +44,28 @@
         <h3>PROJECTS</h3>
         <div class='project-container'>
           <div class='project-img'>
+            <a href="https://cbl-app.now.sh/" target="_blank">
+              <img class='cbl-app-img' src='images/beerData.png' alt='Craft Brew Locker data page'>
+            </a>
+          </div>
+          <div class='project-details'>
+            <h4>The Craft Brew Locker</h4>
+            <h4 class='hash1'>#React.js, #Node.js, #PostgreSQL, #CSS3</h4>
+            <p>
+              <span class='hash2'>Full Stack Web Application -</span>
+              Responsive full stack web application built with a React client running on a Node server with PostgreSQL
+              DB management.
+            </p>
+            <a href="https://cbl-app.now.sh/" target="_blank">Live Site </a>
+            <span> | </span>
+            <a href="https://github.com/mblakley4/Craft-Brew-Locker-App" target="_blank">Client GitHub</a>
+            <span> | </span>
+            <a href="https://github.com/mblakley4/cbl-api" target="_blank">API GitHub</a>
+          </div>
+        </div>
+
+        <div class='project-container'>
+          <div class='project-img'>
             <a href="https://terra-app.now.sh" target="_blank">
               <img class='terra-app-img' src='images/terra_app.png' alt='The Terra Project App'>
             </a>
