--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <span class='hash3'>#soccerdad</span>
       </p>
       <div id='projectLink'></div>
-      <p class='aboutText'>I became an engineer to creatively solve problems and develop solutions.
-      Now I develop web applications for the same purpose.  I'm excited to get involved with a great
+      <p class='aboutText'>I became an engineer to creatively solve technical problems.
+      Now I develop web applications with the same purpose.  I'm excited to get involved with a great
       team of web application developers where we can deploy great apps and I can continue to grow professionally.</p>
       <section>
         <h3>PROJECTS</h3>
@@ -50,11 +50,11 @@
           </div>
           <div class='project-details'>
             <h4>The Craft Brew Locker</h4>
-            <h4 class='hash1'>#React.js, #Node.js, #PostgreSQL, #CSS3</h4>
+            <h4 class='hash1'>#React.js, #Node.js, #PostgreSQL, #CSS3, #HTML5</h4>
             <p>
               <span class='hash2'>Full Stack Web Application -</span>
-              Responsive full stack web application built with a React client running on a Node server with PostgreSQL
-              DB management.
+              Responsive full stack web application built with a React client
+              running on a Node server with PostgreSQL database management.
             </p>
             <a href="https://cbl-app.now.sh/" target="_blank">Live Site </a>
             <span> | </span>
@@ -72,11 +72,11 @@
           </div>
           <div class='project-details'>
             <h4>The <em>Terra </em> App</h4>
-            <h4 class='hash1'>#React.js, #Node.js, #PostgreSQL, #CSS3</h4>
+            <h4 class='hash1'>#React.js, #Node.js, #PostgreSQL, #CSS3, #HTML5</h4>
             <p>
               <span class='hash2'>Full Stack Web Application -</span>
-              Responsive full stack web application built with a React client running on a Node server with PostgreSQL
-              DB management.
+              Deployed full stack web application built on a NodeJS API. This app
+              features a collection of libraries including testing with Mocha, Chai, and SuperTest.
             </p>
             <a href="https://terra-app.now.sh" target="_blank">Live Site </a>
             <span> | </span>
@@ -147,16 +147,15 @@
       <section class="experience">
         <h3>EXPERIENCE</h3>
         <h4>Bloc, Jacksonville, Fl<span class='titles'> - Web Developer Apprenticeship</span></h4>
-        <p class='date'>March 2019 - Present (6 months)</p>
+        <p class='date'>April 2019 - December 2019 (9 months)</p>
         <ul>
           <li>Learned industry best practices and practical software development standards with a
-            focus on HTML5, CSS3, JavaScript, React, Node and jQuery</li>
+            focus on asynchronous web applications, algorithms and data structures</li>
           <li>Created and deployed responsive mobile-first applications while learning new languages
-            and frameworks by collaborating several hours every week with a senior web developer</li>
-          <li>Currently developing server-side skills with Node.js, PostgreSQL and Redux</li>
+            and frameworks by collaborating every week with a senior web developer</li>
         </ul>
         <h4>Anheuser-Busch, Jacksonville, Fl<span class='titles'> - Business Process Manager</span></h4>
-        <p class='date'>April 2016 - March 2019 (3 years)</p>
+        <p class='date'>April 2016 - April 2019 (3 years 1 month)</p>
         <p>Selected by the Senior Operations Manager to lead the Operations Maintenance Department and
           manage over 60 technicians, salaried employees, and peers after successfully managing process
           improvement and implementation on our Draught Line and Palletizers. Additionally selected over
