--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
       </div>
     </nav>
     <main role='main'>
-      <h2>FULL STACK DEVELOPER</h2>
+      <h2>FULL STACK JAVASCRIPT DEVELOPER</h2>
       <p>
         <span class='hash1'>#webapps</span>
         <span class='hash2'>#javascript</span>
         <span class='hash3'>#electricalengineer</span>
-        <span class='hash1'>#getoutdoors</span>
-        <span class='hash2'>#liftweights</span>
-        <span class='hash3'>#soccerdad</span>
+        <span class='hash1'>#React.js</span>
+        <span class='hash2'>#Node.js</span>
+        <span class='hash3'>#PostgreSQL</span>
       </p>
       <div id='projectLink'></div>
       <p class='aboutText'>I became an engineer to creatively solve technical problems.
@@ -86,7 +86,7 @@
           </div>
         </div>
 
-        <div class='project-container'>
+        <!-- <div class='project-container'>
           <div class='project-img'>
             <a href="https://react-portfolio.mblakley4.now.sh/" target="_blank">
               <img class='react-img' src='images/react.png' alt='react logo'>
@@ -103,7 +103,7 @@
             <span> | </span>
             <a href="https://github.com/mblakley4/react-portfolio" target="_blank">GitHub</a>
           </div>
-        </div>
+        </div> -->
 
         <div class='project-container'>
           <div class='project-img'>
@@ -144,16 +144,15 @@
           </div>
         </div>
       </section>
+      <section class='education'>
+        <h3>EDUCATION</h3>
+        <h4>Bloc<span class='titles'> - Web Developer Curriculum</span></h4>
+        <p class='date'>Remote, 2019</p>
+        <h4>United States Military Academy<span class='titles'> - Electrical Engineering (B.S.)</span></h4>
+        <p class='date'>West Point, NY 2005</p>
+      </section>
       <section class="experience">
         <h3>EXPERIENCE</h3>
-        <h4>Bloc, Jacksonville, Fl<span class='titles'> - Web Developer Apprenticeship</span></h4>
-        <p class='date'>April 2019 - December 2019 (9 months)</p>
-        <ul>
-          <li>Learned industry best practices and practical software development standards with a
-            focus on asynchronous web applications, algorithms and data structures</li>
-          <li>Created and deployed responsive mobile-first applications while learning new languages
-            and frameworks by collaborating every week with a senior web developer</li>
-        </ul>
         <h4>Anheuser-Busch, Jacksonville, Fl<span class='titles'> - Business Process Manager</span></h4>
         <p class='date'>April 2016 - April 2019 (3 years 1 month)</p>
         <p>Selected by the Senior Operations Manager to lead the Operations Maintenance Department and
@@ -214,11 +213,6 @@
           <li>Honorably discharged veteran with numerous commendations for individual achievement
             and exceptionally meritorious service</li>
         </ul>
-      </section>
-      <section class='education'>
-        <h3>EDUCATION</h3>
-        <h4>United States Military Academy<span class='titles'> - Electrical Engineering (B.S.)</span></h4>
-        <p class='date'>West Point, NY 2005</p>
       </section>
     </main>
     <footer id='js-footer'>
