new site message

--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
       <p class='aboutText'>I became an engineer to creatively solve technical problems.
       Now I develop web applications with the same purpose.  I'm excited to get involved with a great
       team of web application developers where we can deploy great apps and I can continue to grow professionally.</p>
+      <h3>Check back soon...new site in Next.JS on the way.</h3>
       <section>
-        <h3>PROJECTS</h3>
+        <h3 class='section-title'>PROJECTS</h3>
         <div class='project-container'>
           <div class='project-img'>
             <a href="https://cbl-app.now.sh/" target="_blank">
@@ -145,14 +146,14 @@
         </div>
       </section>
       <section class='education'>
-        <h3>EDUCATION</h3>
+        <h3 class='section-title'>EDUCATION</h3>
         <h4>Bloc<span class='titles'> - Web Developer Curriculum</span></h4>
         <p class='date'>Remote, 2019</p>
         <h4>United States Military Academy<span class='titles'> - Electrical Engineering (B.S.)</span></h4>
         <p class='date'>West Point, NY 2005</p>
       </section>
       <section class="experience">
-        <h3>EXPERIENCE</h3>
+        <h3 class='section-title'>EXPERIENCE</h3>
         <h4>Anheuser-Busch, Jacksonville, Fl<span class='titles'> - Business Process Manager</span></h4>
         <p class='date'>April 2016 - April 2019 (3 years 1 month)</p>
         <p>Selected by the Senior Operations Manager to lead the Operations Maintenance Department and
