added resume link to google docs

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-147513533-2"></script>
     <script>
@@ -32,7 +33,12 @@
       <h1>{mw}_blakley</h1>
       <div class='nav-links'>
         <a href='#projectLink'>PROJECTS</a>
-        <a href='#resumeLink'>RESUME</a>
+        <a
+          href='https://docs.google.com/document/d/1HE2adb0EP7dm2XryFKJ6nIg1Wnovc_FMRBX3-Xp3Q08/edit?usp=sharing'
+          target='_blank'
+        >
+          RESUME
+        </a>
         <a href="mailto:m.blakley@icloud.com" target="_blank">CONTACT</a>
       </div>
     </nav>
@@ -154,7 +160,7 @@
           </div>
         </div>
       </section>
-      <section class='education'>
+      <!-- <section class='education'>
         <h3 class='section-title'>EDUCATION</h3>
         <h4>Bloc<span class='titles'> - Web Developer Curriculum</span></h4>
         <p class='date'>Remote, 2019</p>
@@ -223,7 +229,7 @@
           <li>Honorably discharged veteran with numerous commendations for individual achievement
             and exceptionally meritorious service</li>
         </ul>
-      </section>
+      </section> -->
     </main>
     <footer id='js-footer'>
       <ul>
