landing page edits

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <img class='side-icon' src='images/email.png' alt="email icon"></a>
     </div>
     <nav role='navigation'>
-      <h1>{mw}_blakley</h1>
+      <h1 class='name-logo'>{mw}_blakley</h1>
       <div class='nav-links'>
         <a href='#projectLink'>PROJECTS</a>
         <a
@@ -43,104 +43,101 @@
       </div>
     </nav>
     <main role='main'>
-      <h2>FULL STACK JAVASCRIPT DEVELOPER</h2>
-      <p>
-        <span class='hash1'>#webapps</span>
-        <span class='hash2'>#javascript</span>
-        <span class='hash3'>#electricalengineer</span>
-        <span class='hash1'>#React.js</span>
-        <span class='hash2'>#Node.js</span>
-        <span class='hash3'>#PostgreSQL</span>
-      </p>
-      <div id='projectLink'></div>
-      <p class='aboutText'>I became an engineer to creatively solve technical problems.
-      Now I develop web applications with the same purpose.  I'm excited to get involved with a great
-      team of web application developers where we can deploy great apps and I can continue to grow professionally.</p>
-      <section>
-        <h3 class='section-title'>PROJECTS</h3>
-        <div class='project-container'>
-          <div class='project-img'>
-            <a href="https://cbl-app.now.sh/" target="_blank">
-              <img class='cbl-app-img' src='images/beerData.png' alt='Craft Brew Locker data page'>
-            </a>
-          </div>
-          <div class='project-details'>
-            <h4>The Craft Brew Locker</h4>
-            <h4 class='hash1'>#React.js, #Node.js, #PostgreSQL, #CSS3, #HTML5</h4>
-            <p>
-              <span class='hash2'>Full Stack Web Application -</span>
-              Responsive full stack web application built with a React client
-              running on a Node server with PostgreSQL database management.
-            </p>
-            <a href="https://cbl-app.now.sh/" target="_blank">Live Site </a>
-            <span> | </span>
-            <a href="https://github.com/mblakley4/Craft-Brew-Locker-App" target="_blank">Client GitHub</a>
-            <span> | </span>
-            <a href="https://github.com/mblakley4/cbl-api" target="_blank">API GitHub</a>
-          </div>
-        </div>
-
-        <div class='project-container'>
-          <div class='project-img'>
-            <a href="https://terra-app.now.sh" target="_blank">
-              <img class='terra-app-img' src='images/terra_app.png' alt='The Terra Project App'>
-            </a>
-          </div>
-          <div class='project-details'>
-            <h4>The <em>Terra </em> App</h4>
-            <h4 class='hash1'>#React.js, #Node.js, #PostgreSQL, #CSS3, #HTML5</h4>
-            <p>
-              <span class='hash2'>Full Stack Web Application -</span>
-              Deployed full stack web application built on a NodeJS API. This app
-              features a collection of libraries including testing with Mocha, Chai, and SuperTest.
-            </p>
-            <a href="https://terra-app.now.sh" target="_blank">Live Site </a>
-            <span> | </span>
-            <a href="https://github.com/mblakley4/terra-app" target="_blank">Client GitHub</a>
-            <span> | </span>
-            <a href="https://github.com/mblakley4/terra-api" target="_blank">API GitHub</a>
-          </div>
-        </div>
-
-        <div class='project-container'>
-          <div class='project-img'>
-            <a href="https://mblakley4.github.io/cryptoCircadian/" target="_blank">
-              <img class='crypto-img' src='images/crypto invest.jpg' alt='crypto hero'>
-            </a>
-          </div>
-          <div class='project-details'>
-            <h4>Crypto Circadian</h4>
-            <h4 class='hash1'>#Javascript, #jQuery, #CSS3, #HTML5</h4>
-            <p>
-              <span class='hash2'>Front End Web Application -</span>
-              Provides daily cryptocurrency data and news on the top 10 market cap coins.
-            </p>
-            <a href="https://mblakley4.github.io/cryptoCircadian/" target="_blank">Crypto Circadian Link</a>
-            <span> | </span>
-            <a href="https://github.com/mblakley4/cryptoCircadian" target="_blank">GitHub</a>
-          </div>
-        </div>
-
-        <div class='project-container'>
-          <div class='project-img'>
-            <a href="https://mblakley4.github.io/Quiz-App/" target="_blank">
-              <img class='gym-img' src='images/gym.jpg' alt='quiz app hero'>
-            </a>
-          </div>
-          <div class='project-details'>
-            <h4>Weight Training Knowledge Check</h4>
-            <h4 class='hash1'>#Javascript, #jQuery, #CSS3, #HTML5</h4>
-            <div id='resumeLink'></div>
-            <p>
-              <span class='hash2'>Front End Web Application -</span>
-              Short Quiz Application to check out your knowledge in the weight room.
-            </p>
-            <a href="https://mblakley4.github.io/Quiz-App/" target="_blank">Quiz App Link</a>
-            <span> | </span>
-            <a href="https://github.com/mblakley4/Quiz-App" target="_blank">GitHub</a>
-          </div>
-        </div>
+      <section class='intro'>
+        <h1>
+          <span class='intro-hi'>Hi, I'm</span>
+          <br />
+          <span class='myName'>Mike Blakley</span>
+        </h1>
+        <h2>Full Stack Engineer</h2>
+        <p class='intro-description'>I'm a Software Engineer based in Jacksonville, FL specializing in building
+          high-quality web applications and software solutions.</p>
       </section>
+      <section id='projectLink'>
+          <h3 class='section-title'>PROJECTS</h3>
+          <div class='project-container'>
+            <div class='project-img'>
+              <a href="https://cbl-app.now.sh/" target="_blank">
+                <img class='cbl-app-img' src='images/beerData.png' alt='Craft Brew Locker data page'>
+              </a>
+            </div>
+            <div class='project-details'>
+              <h4>The Craft Brew Locker</h4>
+              <h4 class='hash1'>#React.js, #Node.js, #PostgreSQL, #CSS3, #HTML5</h4>
+              <p>
+                <span class='hash2'>Full Stack Web Application -</span>
+                Responsive full stack web application built with a React client
+                running on a Node server with PostgreSQL database management.
+              </p>
+              <a href="https://cbl-app.now.sh/" target="_blank">Live Site </a>
+              <span> | </span>
+              <a href="https://github.com/mblakley4/Craft-Brew-Locker-App" target="_blank">Client GitHub</a>
+              <span> | </span>
+              <a href="https://github.com/mblakley4/cbl-api" target="_blank">API GitHub</a>
+            </div>
+          </div>
+
+          <div class='project-container'>
+            <div class='project-img'>
+              <a href="https://terra-app.now.sh" target="_blank">
+                <img class='terra-app-img' src='images/terra_app.png' alt='The Terra Project App'>
+              </a>
+            </div>
+            <div class='project-details'>
+              <h4>The <em>Terra </em> App</h4>
+              <h4 class='hash1'>#React.js, #Node.js, #PostgreSQL, #CSS3, #HTML5</h4>
+              <p>
+                <span class='hash2'>Full Stack Web Application -</span>
+                Deployed full stack web application built on a NodeJS API. This app
+                features a collection of libraries including testing with Mocha, Chai, and SuperTest.
+              </p>
+              <a href="https://terra-app.now.sh" target="_blank">Live Site </a>
+              <span> | </span>
+              <a href="https://github.com/mblakley4/terra-app" target="_blank">Client GitHub</a>
+              <span> | </span>
+              <a href="https://github.com/mblakley4/terra-api" target="_blank">API GitHub</a>
+            </div>
+          </div>
+
+          <div class='project-container'>
+            <div class='project-img'>
+              <a href="https://mblakley4.github.io/cryptoCircadian/" target="_blank">
+                <img class='crypto-img' src='images/crypto invest.jpg' alt='crypto hero'>
+              </a>
+            </div>
+            <div class='project-details'>
+              <h4>Crypto Circadian</h4>
+              <h4 class='hash1'>#Javascript, #jQuery, #CSS3, #HTML5</h4>
+              <p>
+                <span class='hash2'>Front End Web Application -</span>
+                Provides daily cryptocurrency data and news on the top 10 market cap coins.
+              </p>
+              <a href="https://mblakley4.github.io/cryptoCircadian/" target="_blank">Crypto Circadian Link</a>
+              <span> | </span>
+              <a href="https://github.com/mblakley4/cryptoCircadian" target="_blank">GitHub</a>
+            </div>
+          </div>
+
+          <div class='project-container'>
+            <div class='project-img'>
+              <a href="https://mblakley4.github.io/Quiz-App/" target="_blank">
+                <img class='gym-img' src='images/gym.jpg' alt='quiz app hero'>
+              </a>
+            </div>
+            <div class='project-details'>
+              <h4>Weight Training Knowledge Check</h4>
+              <h4 class='hash1'>#Javascript, #jQuery, #CSS3, #HTML5</h4>
+              <div id='resumeLink'></div>
+              <p>
+                <span class='hash2'>Front End Web Application -</span>
+                Short Quiz Application to check out your knowledge in the weight room.
+              </p>
+              <a href="https://mblakley4.github.io/Quiz-App/" target="_blank">Quiz App Link</a>
+              <span> | </span>
+              <a href="https://github.com/mblakley4/Quiz-App" target="_blank">GitHub</a>
+            </div>
+          </div>
+        </section>
     </main>
     <footer id='js-footer'>
       <ul>
