--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </script>
 
     <link rel="stylesheet" href="style.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Fira+Mono&display=swap" rel="stylesheet">
     <title>M Blakley's Portfolio</title>
 </head>
   <body>
@@ -30,7 +31,8 @@
         <img class='side-icon' src='images/email.png' alt="email icon"></a>
     </div>
     <nav role='navigation'>
-      <h1 class='name-logo'>{mw}_blakley</h1>
+      <!-- <h1 class='name-logo'>{mw}_blakley</h1> -->
+      <img src='./images/zek.png' class='zek'>
       <div class='nav-links'>
         <a href='#projectLink'>PROJECTS</a>
         <a
