--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
+    <script src="https://kit.fontawesome.com/dfc08bce53.js" crossorigin="anonymous"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-147513533-2"></script>
     <script>
@@ -22,13 +22,13 @@
   <body>
     <div class='sidebar' id='js-sidebar'>
       <a href='https://github.com/mblakley4' target='_blank'>
-        <img class='side-icon' src='images/github.png' alt='github logo'></a>
+        <i class="fab fa-github side-icon"></i></a>
       <a href='https://linkedin.com/in/mblakley' target='_blank'>
-        <img class='side-icon' src='images/linkedIn.png' alt='linked in logo'></a>
+        <i class="fab fa-linkedin-in side-icon"></i></a>
       <a href='https://twitter.com/mblakley4' target='_blank'>
-        <img class='side-icon' src='images/twitter.png' alt='twitter logo'></a>
+        <i class="fab fa-twitter side-icon"></i></a>
       <a href='mailto:m.blakley@icloud.com' target='_blank'>
-        <img class='side-icon' src='images/email.png' alt="email icon"></a>
+        <i class="fas fa-envelope-square side-icon"></i></a>
     </div>
     <nav role='navigation'>
       <!-- <h1 class='name-logo'>{mw}_blakley</h1> -->
@@ -143,14 +143,14 @@
     </main>
     <footer id='js-footer'>
       <ul>
-          <li><img class="square footer-icon" src="images/email.png">
-              <a href="mailto:m.blakley@icloud.com" target="_blank" alt="email icon"></a></li>
-          <li><img class="footer-icon" src="images/github.png">
-              <a href="https://github.com/mblakley4" target="_blank" alt="gitHub logo"></a></li>
-          <li><img class="footer-icon" src="images/linkedIn.png">
-              <a href="https://twitter.com/mblakley4" target="_blank" alt="Linked In logo"></a></li>
-          <li><img class="footer-icon" src="images/twitter.png">
-              <a href="https://twitter.com/mblakley4" target="_blank" alt="twitter logo"></a></li>
+        <li><i class="fab fa-github footer-icon"></i>
+            <a href="https://github.com/mblakley4" target="_blank" alt="gitHub logo"></a></li>
+        <li><i class="fab fa-linkedin-in footer-icon"></i>
+            <a href="https://twitter.com/mblakley4" target="_blank" alt="Linked In logo"></a></li>
+        <li><i class="fab fa-twitter footer-icon"></i>
+            <a href="https://twitter.com/mblakley4" target="_blank" alt="twitter logo"></a></li>
+          <li><i class="fas fa-envelope-square footer-icon"></i>
+              <a href="mailto:m.blakley@icloud.com" target="_blank" alt="email icon"></a></li>    
       </ul>
     </footer>
   </body>
