email non-square

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <a href='https://twitter.com/mblakley4' target='_blank'>
         <i class="fab fa-twitter side-icon"></i></a>
       <a href='mailto:m.blakley@icloud.com' target='_blank'>
-        <i class="fas fa-envelope-square side-icon"></i></a>
+        <i class="fas fa-envelope side-icon"></i></a>
     </div>
     <nav role='navigation'>
       <!-- <h1 class='name-logo'>{mw}_blakley</h1> -->
@@ -149,8 +149,8 @@
             <a href="https://twitter.com/mblakley4" target="_blank" alt="Linked In logo"></a></li>
         <li><i class="fab fa-twitter footer-icon"></i>
             <a href="https://twitter.com/mblakley4" target="_blank" alt="twitter logo"></a></li>
-          <li><i class="fas fa-envelope-square footer-icon"></i>
-              <a href="mailto:m.blakley@icloud.com" target="_blank" alt="email icon"></a></li>    
+          <li><i class="fas fa-envelope footer-icon"></i>
+              <a href="mailto:m.blakley@icloud.com" target="_blank" alt="email icon"></a></li>
       </ul>
     </footer>
   </body>
