--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
           </div>
         </section>
     </main>
+    <img src='./images/zekker.png' class='zekker'>
     <footer id='js-footer'>
       <ul>
         <li><i class="fab fa-github footer-icon"></i>
