--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
           <br />
           <span class='myName'>Mike Blakley</span>
         </h1>
-        <h2>Full Stack Engineer</h2>
-        <p class='intro-description'>I'm a Software Engineer based in Jacksonville, FL specializing in building
+        <h2>Full Stack Developer</h2>
+        <p class='intro-description'>I'm a Software Developer based in Jacksonville, FL specializing in building
           high-quality web applications and software solutions.</p>
       </section>
       <section id='projectLink'>
