email and resume links

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <i class="fab fa-linkedin-in side-icon"></i></a>
       <a href='https://twitter.com/mblakley4' target='_blank'>
         <i class="fab fa-twitter side-icon"></i></a>
-      <a href='mailto:m.blakley@icloud.com' target='_blank'>
+      <a href='mailto:michael.blakley@gmail.com' target='_blank'>
         <i class="fas fa-envelope side-icon"></i></a>
     </div>
     <nav role='navigation'>
@@ -41,12 +41,12 @@
       <div class='nav-links'>
         <a href='#projectLink'>PROJECTS</a>
         <a
-          href='https://docs.google.com/document/d/1HE2adb0EP7dm2XryFKJ6nIg1Wnovc_FMRBX3-Xp3Q08/edit?usp=sharing'
+          href='https://docs.google.com/document/d/1a4b75zluIE7hCZYFxZSS5mEO46OaIlkph1IULIi7x5U/edit?usp=sharing'
           target='_blank'
         >
           RESUME
         </a>
-        <a href="mailto:m.blakley@icloud.com" target="_blank">CONTACT</a>
+        <a href="mailto:michael.blakley@gmail.com" target="_blank">CONTACT</a>
       </div>
     </nav>
     <main role='main'>
